--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,19 @@
 spring:
   application:
     name: User Service
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          jwk-set-uri: ${keycloak.baseUrl}/protocol/openid-connect/certs
 
 server:
   port: 8082
   servlet:
     contextPath: /users
+
+
+keycloak:
+  realm: library
+  serverUrl: http://keycloak:8080
+  baseUrl: ${keycloak.serverUrl}/realms/${keycloak.realm}
