Attached access token for each outgoing http call

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,3 +17,4 @@ keycloak:
   realm: library
   serverUrl: http://keycloak:8080
   baseUrl: ${keycloak.serverUrl}/realms/${keycloak.realm}
+  adminApiPath: ${keycloak.serverUrl}/admin/realms
