--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,8 @@ dependencies {
 	implementation 'com.squareup.okio:okio:1.6.0'
 	implementation 'io.swagger.core.v3:swagger-annotations:2.0.0'
 
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'mysql:mysql-connector-java:8.0.15'
 }
 
 tasks.named('test') {
