--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,3 +31,5 @@ keycloak:
   serverUrl: http://keycloak:8080
   baseUrl: ${keycloak.serverUrl}/realms/${keycloak.realm}
   adminApiPath: ${keycloak.serverUrl}/admin/realms
+  users:
+    pageSize: 5
