--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ dependencies {
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'mysql:mysql-connector-java:8.0.15'
+	implementation 'org.projectlombok:lombok:1.18.34'
 }
 
 tasks.named('test') {
