--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,7 +32,7 @@ keycloak:
   baseUrl: ${keycloak.serverUrl}/realms/${keycloak.realm}
   adminApiPath: ${keycloak.serverUrl}/admin/realms
   client-id: user-service
-  client-secret: ${USER_SERVICE_CLIENT_SECRET}
+  client-secret: ${USER_SERVICE_CLIENT_SECRET:''}
   tokenUri: ${keycloak.baseUrl}/protocol/openid-connect/token
   users:
     pageSize: 5
