--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,8 +1,7 @@
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:mem:db
 spring.datasource.username=sa
 spring.datasource.password=sa
 
 spring.jpa.hibernate.ddl-auto=create-drop
-jakarta.persistence.jdbc.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
