Disable DataBaseInitializer logic when tests are running

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,3 +36,7 @@ keycloak:
   tokenUri: ${keycloak.baseUrl}/protocol/openid-connect/token
   users:
     pageSize: 100
+
+user-service:
+  initial-load:
+    enabled: true
