--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,7 +1,9 @@
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:db
+spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=true;NON_KEYWORDS=VALUE
 spring.datasource.username=sa
 spring.datasource.password=sa
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+hibernate.globally_quoted_identifiers=true
+user-service.initial-load.enabled=false
