--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,7 @@ dependencies {
 
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.3'
 	implementation 'io.swagger.core.v3:swagger-annotations:2.2.16'
+	implementation 'org.springframework.kafka:spring-kafka:3.1.2'
 }
 
 tasks.named('test') {
