Listen for UpdateUserEvents

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.2'
 	id 'io.spring.dependency-management' version '1.1.6'
+	id  'com.github.davidmc24.gradle.plugin.avro' version  '1.9.1'
 }
 
 group = 'pl.szymanski'
@@ -17,6 +18,9 @@ repositories {
 	mavenCentral()
 	flatDir {
 		dirs("libs")
+	}
+	maven {
+		url "https://packages.confluent.io/maven/"
 	}
 }
 
@@ -54,6 +58,11 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.3'
 	implementation 'io.swagger.core.v3:swagger-annotations:2.2.16'
 	implementation 'org.springframework.kafka:spring-kafka:3.1.2'
+
+	implementation 'io.confluent:kafka-avro-serializer:7.7.1'
+	implementation 'org.apache.avro:avro-compiler:1.12.0'
+	implementation 'org.apache.avro:avro:1.11.0'
+
 }
 
 tasks.named('test') {
