--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,7 @@ dependencies {
 	implementation 'io.confluent:kafka-avro-serializer:7.7.1'
 	implementation 'org.apache.avro:avro-compiler:1.12.0'
 	implementation 'org.apache.avro:avro:1.11.0'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 }
 
